--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -1,6 +1,6 @@
 <div class="search-bar form-inline">
   <input class="form-control" type="text" />
-  <button class="btn">
+  <button class="btn" ng-click="$ctrl.click">
     <span class="glyphicon glyphicon-search"></span>
   </button>
 </div>
