--- a/src/templates/videoPlayer.html
+++ b/src/templates/videoPlayer.html
@@ -1,7 +1,8 @@
 <div class="video-player">
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" 
-    ng-src="{{'https://www.youtube.com/embed/'+$ctrl.video.id.videoId}}" allowFullScreen>Please wait</iframe>
+    <iframe ng-if="$ctrl.video.id.videoId" class="embed-responsive-item" 
+    ng-src="{{'https://www.youtube.com/embed/'+$ctrl.video.id.videoId}}" allowFullScreen></iframe>
+    <div ng-if="!$ctrl.video.id.videoId" src="">Please wait</div>
   </div>
   <div class="video-player-details">
     <h3>{{$ctrl.video.snippet.title}}</h3>
