--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -1,15 +1,15 @@
 <div id="app container">
   <nav class="navbar">
     <div class="col-md-6 col-md-offset-3">
-      <search></search>
+      <search click="$ctrl.click" ></search>
     </div>
   </nav>
   <div class="row">
     <div class="col-md-7">
-      <video-player video="$ctrl.videos[0]"></video-player>
+      <video-player video="$ctrl.currentVideo"></video-player>
     </div>
     <div class="col-md-5">
-      <video-list onClick="$ctrl.onClick"
+      <video-list select-video="$ctrl.selectVideo"
         videos="$ctrl.videos"></video-list>
     </div>
   <div>
