--- a/src/templates/videoList.html
+++ b/src/templates/videoList.html
@@ -1,5 +1,5 @@
 <ul class="video-list">
-  <video-list-entry  ng-repeat="video in $ctrl.videos" video="video">
+  <video-list-entry select-video="$ctrl.selectVideo" ng-repeat="video in $ctrl.videos" video="video">
 
   </video-list-entry>
   
